--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.header{
+  background-image: url('/imgs/tables.jpg');
+  background-size: cover;
+  height: 120px;
+  margin-bottom: 50px;
+}
+.logo{
+  margin: 20px 0 0 40px;
+  border: 6px white solid;
+}
+.menu{  
+  background-color: rgb(242, 239, 235);
+  margin: 25px ;
+}
