--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,7 @@ code {
 }
 
 .header{
-  background-image: url('/imgs/tables.jpg');
-  background-size: cover;
+  background-color: #F0EDE6;
   height: 120px;
   margin-bottom: 50px;
 }
@@ -22,7 +21,48 @@ code {
   margin: 20px 0 0 40px;
   border: 6px white solid;
 }
-.menu{  
-  background-color: rgb(242, 239, 235);
-  margin: 25px ;
+.times{
+  background-image: url('/imgs/tables.jpg');
+  background-size: cover;
+  height: 40%;
+}
+.hometxt{
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 7px;  
+  margin-left: 5rem;
+  font-size: 2.5rem;
+  text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(142, 189, 220), 0 0 5px rgba(29, 76, 147, 0.625);
+}
+.txt{
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 7px;  
+  margin-left: 5rem;
+  font-size: 1.5rem;
+  line-height: 3rem; 
+}
+.button{
+  padding: 0 10px;
+  font-size: 11px;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #01D594;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  
+}
+.button:hover{
+  background-color: #2EE59D;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+.sum{
+  width: 200px;
 }
