Re instalando React Map Gl

--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@ code {
   margin: 20px 0 0 40px;
   border: 6px white solid;
 }
-.logof{
-  margin: 20px 0 0 40px;
+.foot{
+  margin: 20px 0 0 40px;  
 }
 .times{
   background-image: url('/imgs/tables.jpg');
